Fixed header spacing gap in tablet

--- a/public/a/c/_header.scss
+++ b/public/a/c/_header.scss
@@ -81,7 +81,7 @@ header {
 }
 
 @media (min-width: 768px) and (max-width: 979px) {  
-.search-wrap{margin-top:155px;}
+.search-wrap{margin-top:130px;}
 }
 
 @media (max-width: 400px) {
