--- a/public/a/c/screen.css
+++ b/public/a/c/screen.css
@@ -1243,7 +1243,7 @@ header {
     margin-top: 15px; } }
 @media (min-width: 768px) and (max-width: 979px) {
   .search-wrap {
-    margin-top: 155px; } }
+    margin-top: 130px; } }
 @media (max-width: 400px) {
   .search-wrap {
     margin-top: -35px; } }
